<resources>
    <string name="app_name">Remind-App</string>
    <string name="title_remind">Remind</string>
    <string name="title_note">Note</string>
    <string name="title_setting">Setting</string>
    <string name="title_login">LOGIN</string>

    <string name="button_note">Note</string>
    <string name="button_move">Move</string>
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
    <string name="button_add">Add</string>

    <string name="hint_note_dialog_content">Enter the content</string>
    <string name="hint_note_dialog_detail">Enter the detail</string>
    <string name="hint_user_name">Enter your Username</string>
    <string name="hint_password">Enter password</string>
    <string name="button_login">Login</string>
    <string name="button_new_activity">New Activity</string>
    <string name="hint_input_name">Enter the name</string>
    <string name="hint_input_email">Enter the email</string>

</resources>

