<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

     <data>
         <import type="android.view.View"/>
        <variable
            name="LoginViewModel"
            type="com.example.remind_app.LoginViewModel" />
     </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/padding_big"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtLogin"
            android:text="@string/title_login"
            android:textSize="@dimen/title_text"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <EditText
            android:id="@+id/txtUserName"
            android:hint="@string/hint_user_name"
            android:text="@={LoginViewModel.username}"
            android:textSize="@dimen/medium_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:onClick="@{()->LoginViewModel.hideMessage()}"
            app:layout_constraintTop_toBottomOf="@id/txtLogin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <EditText
            android:id="@+id/txtPassword"
            android:hint="@string/hint_password"
            android:text="@={LoginViewModel.password}"
            android:textSize="@dimen/medium_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:onClick="@{()->LoginViewModel.hideMessage()}"
            app:layout_constraintTop_toBottomOf="@id/txtUserName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />


        <TextView
            android:id="@+id/txtErrorMessage"
            android:text="@{LoginViewModel.messageLogin}"
            android:textSize="@dimen/medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:visibility="@{LoginViewModel.isShowMessage() ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/txtPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/button_login"
            android:textSize="@dimen/button_text"
            android:layout_width="@dimen/size_big"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:onClick="@{(View)->LoginViewModel.onClickLogin(View)}"
            app:layout_constraintTop_toBottomOf="@id/txtErrorMessage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>