<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/size_big"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding"
    android:background="@drawable/style_of_item">

    <ImageView
        android:id="@+id/img_inDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/margin_small"
        android:src="@drawable/icon_pause"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_inDialog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/layoutContent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editItemContent"
            android:hint="@string/hint_note_dialog_content"
            android:textSize="@dimen/small_text"
            android:layout_width="@dimen/size_medium"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ems="10"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutContent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:id="@+id/layoutDetail"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editItemDetail"
            android:hint="@string/hint_note_dialog_detail"
            android:textSize="@dimen/small_text"
            android:layout_width="@dimen/size_medium"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ems="10"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAdd_inDialog"
        android:text="@string/button_add"
        android:textSize="@dimen/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/layoutDetail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>